fix scroll when data explorer not visible

--- a/src/scss/meo.scss
+++ b/src/scss/meo.scss
@@ -6,6 +6,7 @@ body {
   font-size: 12px;
   font-weight: 300;
   font-family: $font-family;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
